Commit before switching over to JavaFX project